# SideInstaller

./: .gitignore  NOTES.md  build-rust.sh  index.html  project.yml  vite.config.ts
.github/workflows/: deploy.yml  plist-and-index.yml  sign-sideinstaller.yml
ios-app/: AnisetteServers.swift  CertManager.swift  CertsView.swift  ContentView.swift  DeviceConnection.swift  Engine.swift  Info.plist  KeepAlive.swift  LocalNetworkAuthorization.swift  NetworkStatus.swift  PairingController.swift  PairingManager.swift  PairingView.swift  RootView.swift  SettingsView.swift  SideInstallerApp.swift  SideStoreDownloader.swift  Theme.swift  UpdateChecker.swift  WelcomeView.swift
output/: app-info.tsv  certificate-validity.tsv  sideinstaller-Aramco.plist  sideinstaller-BOC.plist  sideinstaller-Beijing.plist  sideinstaller-China-National-Heavy-Duty-Truck-Group-Co.-Ltd..plist  sideinstaller-China-Telecom-Corporation-Limited.plist  sideinstaller-ChinaAcademy.plist  sideinstaller-ChinaPower.plist  sideinstaller-Election.plist  sideinstaller-Forever.plist  sideinstaller-Guangzhou-Huahan-Educational-Technology-Co.-Ltd..plist  sideinstaller-Jiangsu-Simcere-Pharmaceutical-Co.-Ltd-workone.plist  sideinstaller-Moving-Increasingly-Interconnected-Technology-Co.-Ltd-com.oa11.plist  sideinstaller-National.plist  sideinstaller-Postal.plist  sideinstaller-Rural.plist  sideinstaller-Takeoff.plist  sideinstaller-Tianjin-University-of-Commerce.plist  sideinstaller-VIETNAM-AIRLINES-JSC-MOPLUS-LIDO-UAT.plist  sideinstaller-VIETNAM-JOINT-STOCK-COMMERCIAL-BANK-FOR-INDUSTRY-AND-TRADE.plist  sideinstaller-Vietnam.plist  sideinstaller-Wuling.plist  sideinstaller-XL.plist
rust-core/: Cargo.toml
rust-core/include/: module.modulemap  sideinstaller.h
rust-core/src/: account.rs  certs.rs  ffi_util.rs  lib.rs  logging.rs  pairing.rs
scripts/: generate_index.sh  sign_with_all_certs.sh  template.html
